added bosstype and disabled worlds to config